test/functions/resolution/error-expected-param-missing2.good
error-expected-param-missing2.chpl:15: In function 'makeThing':
error-expected-param-missing2.chpl:17: error: unresolved call 'R.init(type int(64), int(64), bool)'
error-expected-param-missing2.chpl:8: note: this candidate did not match: R.init(type eltType, bub: eltType, param parSafe = false)
error-expected-param-missing2.chpl:17: note: because non-param call actual argument #3
error-expected-param-missing2.chpl:8: note: is passed to param formal 'param parSafe'
  error-expected-param-missing2.chpl:22: called as makeThing(x: list(int(64),false), bub: list(int(64),false), parSafe: bool)
